--- a/pom.xml
+++ b/pom.xml
@@ -190,5 +190,10 @@
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>4.1.0</version>
+		</dependency>
 	</dependencies>
 </project>
